# a11y-agent

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  agents-cli-manifest.yaml  pyproject.toml  run.sh
app/: __init__.py  agent.py  config.py  fast_api_app.py  path_validator.py
app/.adk/: session.db
app/app_utils/: telemetry.py  typing.py
app/examples/: __init__.py  mcp_graph_multiagent_demo.py
artifacts/grade_results/: results_20260604_234148.html  results_20260604_234148.json  results_20260604_234715.html  results_20260604_234715.json  results_20260606_133213.html  results_20260606_133213.json  results_20260606_135100.html  results_20260606_135100.json  results_20260606_140622.html  results_20260606_140622.json  results_20260606_142356.html  results_20260606_142356.json  results_20260606_143111.html  results_20260606_143111.json  results_20260606_144127.html  results_20260606_144127.json  results_20260606_144852.html  results_20260606_144852.json  results_20260606_145152.html  results_20260606_145152.json
artifacts/traces/: traces_20260604_233723.json  traces_20260606_132912.json  traces_20260606_134834.json  traces_20260606_140408.json  traces_20260606_142213.json  traces_20260606_142853.json  traces_20260606_143642.json  traces_20260606_144352.json  traces_20260606_144856.json  traces_full_pipeline.json
docs/: code-standards.md  codebase-summary.md  deployment-guide.md  project-overview-pdr.md  project-roadmap.md  system-architecture.md
epost-a11y-agent/.adk/: session.db
examples/: README.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
plans/: phase-01-backend-tools.md  phase-02-frontend-ui.md  phase-03-integration.md  plan.md
plans/20260606-1357-fix-full-pipeline-eval-failures/: phase-01-fix-eval-dataset.md  phase-02-harden-agent-instructions.md  phase-03-force-tool-use.md  phase-04-eval-verification.md  plan.md
(+17 files in other folders)
