[project]
name = "epost-a11y-agent"
version = "0.1.0"
description = "Multi-platform WCAG 2.1 AA accessibility auditor — audit, evaluate, and fix across iOS, Android, and Web using iterative refinement"
authors = [
    {name = "Optimus Team", email = "optimus@epost.ch"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    "google-adk>=1.8.0",
    "pydantic>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
