[project]
name = "app"
version = "0.1.0"
description = "Multi-platform WCAG 2.1 AA accessibility auditor — audit, evaluate, and fix across iOS, Android, and Web using iterative refinement"
authors = [
    {name = "Optimus Team", email = "optimus@epost.ch"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    "google-adk>=1.8.0",
    "pydantic>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]

[project.optional-dependencies]
lint = [
    "ruff>=0.4.6",
    "mypy>=1.19.0",
    "codespell>=2.4.1",
]
eval = [
    "google-adk[eval]>=1.8.0",
    "google-cloud-aiplatform[evaluation]>=1.150.0",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]

[tool.mypy]
ignore_missing_imports = true
explicit_package_bases = true
exclude = [".venv"]

[tool.codespell]
skip = "uv.lock,.venv,./frontend"

[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
